# llmWikiConsumer

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  config.py  main.py
app/api/v1/: admin.py  chat.py  router.py
app/core/: wikifs.py
app/db/: postgres.py  redis.py  storage.py  vector.py
app/models/: db_models.py  schemas.py
app/services/: agent.py  llm_client.py  version.py
frontend/: admin.html  app.js  index.html  style.css
scripts/: create_test_wiki.py  dev-start.sh  dev-stop.sh  dev.sh
tests/: conftest.py  test_agent.py  test_version_upload.py  test_wikifs.py
